🪟 🐛  Fix overflowing streams list in Builder (#10986)

--- a/airbyte-webapp/src/components/connectorBuilder/Builder/BuilderSidebar.module.scss
+++ b/airbyte-webapp/src/components/connectorBuilder/Builder/BuilderSidebar.module.scss
@@ -46,11 +46,13 @@
 .streamListContainer {
   flex-grow: 1;
   width: 100%;
+  min-height: 0;
 }
 
 .streamList {
   flex-grow: 1;
   overflow-y: auto;
+  min-height: 0;
 }
 
 .viewLabel {
