--- a/airbyte-webapp/src/components/connectorBuilder/Sidebar.module.scss
+++ b/airbyte-webapp/src/components/connectorBuilder/Sidebar.module.scss
@@ -44,4 +44,5 @@
 .modeSpecificContent {
   flex-grow: 1;
   width: 100%;
+  min-height: 0;
 }
